// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionHeader renders the section header 1`] = `
<body>
  <div>
    <div>
      <div
        class="flex items-center justify-between relative"
      >
        <h1
          class="font-bold font-heading text-2xl"
        >
          Customers
        </h1>
      </div>
    </div>
  </div>
</body>
`;

exports[`SectionHeader renders the section header with anchor 1`] = `
<body>
  <div>
    <div>
      <div
        class="flex items-center justify-between relative"
      >
        <h1
          class="font-bold font-heading text-2xl"
        >
          Customers
        </h1>
        <a
          href="/customers"
        >
          See all
        </a>
      </div>
    </div>
  </div>
</body>
`;

exports[`SectionHeader renders the section header with external anchor 1`] = `
<body>
  <div>
    <div>
      <div
        class="flex items-center justify-between relative"
      >
        <h1
          class="font-bold font-heading text-2xl"
        >
          Customers
        </h1>
        <a
          href="/customers"
          target="_blank"
        >
          See all
        </a>
      </div>
    </div>
  </div>
</body>
`;
